# aoc

2022/: Cargo.toml  ans
2023/day1/src/: main.rs
2023/day10/src/: main.rs
2023/day11/src/: main.rs
2023/day12/: Cargo.toml
2023/day12/src/: main.rs
2023/day16/src/: main.rs
2023/day2/src/: main.rs
2023/day3/day3-bench/: Cargo.toml
2023/day3/day3-bench/benches/: my_benchmark.rs
2023/day3/src/: lib.rs  main.rs
2023/day4/src/: main.rs
2023/day5/src/: main.rs
2023/day6/src/: main.rs
2023/day7/src/: main.rs
2023/day8/src/: main.rs
2023/day9/src/: main.rs
