[package]
name = "day3-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day3 = { version = "0.1.0", path = ".." }
fnv = "1.0.7"
itertools = "0.12.0"
ordered_hash_map = "0.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
